--- a/app/templates/choose_function.html
+++ b/app/templates/choose_function.html
@@ -89,6 +89,8 @@
 </div>
 {% endblock %}
 
+{% include "includes/party_invitation_2025.html" %}
+
 {% block scripts %}
 <script>
     const syncBtn = document.getElementById('sync-employees-btn');
@@ -114,4 +116,5 @@
         });
     }
 </script>
+
 {% endblock %}
