--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -412,7 +412,11 @@
     
     // DANH SÁCH ẢNH (Bạn thay link ảnh khách sạn của bạn vào đây)
     const hotelImages = [
-      '../static/view.jpg', 
+      '../static/view_hotel/B2.jpg',
+      '../static/view_hotel/B3.jpg',
+      '../static/view_hotel/B6.jpg',
+      '../static/view_hotel/B9.jpg',
+      '../static/view_hotel/B15.jpg'
     ];
 
     let currentImgIndex = 0;
@@ -444,8 +448,8 @@
     // Chạy ngay khi tải trang
     initSlideshow();
     
-    // Cài đặt thời gian chuyển: 5000ms = 5 giây
-    setInterval(changeSlide, 5000);
+    // Cài đặt thời gian chuyển: 10000ms = 10 giây
+    setInterval(changeSlide, 10000);
   </script>
   <script>
     // --- 6. Logic Đếm ngược đến Tết Bính Ngọ (17/02/2026) ---
