--- a/app/templates/show_qr.html
+++ b/app/templates/show_qr.html
@@ -123,7 +123,7 @@
   <canvas id="snowCanvas" class="absolute inset-0 pointer-events-none z-0"></canvas>
   
   <audio id="bg-audio" loop>
-      <source src='/static/sounds/giangsinh.mp3' type="audio/mpeg">
+      <source src='/static/sounds/Tet.mp3' type="audio/mpeg">
   </audio>
 
   <div class="w-full max-w-4xl px-4 z-10 animate-fade-in-up">
