Refactor choose_function.html template structure

--- a/app/templates/choose_function.html
+++ b/app/templates/choose_function.html
@@ -89,7 +89,7 @@
 </div>
 {% endblock %}
 
-{% include "includes/party_invitation_2025.html" %}
+{# {% include "includes/party_invitation_2025.html" %} #}
 
 {% block scripts %}
 <script>
