--- a/app/templates/inventory/manager/index.html
+++ b/app/templates/inventory/manager/index.html
@@ -149,7 +149,7 @@
                             <select
                                 class="form-select text-sm rounded-md border-slate-300 dark:border-slate-600 bg-white dark:bg-slate-800 text-slate-700 dark:text-slate-300 shadow-sm focus:border-primary-500 focus:ring-primary-500 w-full sm:w-64"
                                 onchange="changeWarehouse(this)">
-                                <option value="">-- Chọn Kho Hàng --</option>
+                                <option value="">Chọn Kho Hàng</option>
                                 {% for w in warehouses %}
                                 <option value="{{ w.id }}" {% if current_warehouse_id==w.id %}selected{% endif %}>
                                     {{ w.name }} ({{ w.branch.name if w.branch else 'Kho Tổng' }})
